--- a/css/styles.css
+++ b/css/styles.css
@@ -8,9 +8,9 @@
   --hover-btn-color: #188ce8;
   --footer-item-adres-color: rgba(255, 255, 255, 0.6);
   --box-shadow-color: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  --icons-background-color: #F5F4FA;
-  --icons-socisls-color: #AFB1B8;
-  --border-cards-color: #EEEEEE;
+  --icons-background-color: #f5f4fa;
+  --icons-socisls-color: #afb1b8;
+  --border-cards-color: #eeeeee;
 }
 img {
   display: block;
@@ -131,7 +131,7 @@ body {
   align-items: center;
   fill: currentColor;
 }
-.tel-icon{
+.tel-icon {
   margin-left: 30px;
   margin-right: 10px;
   align-items: center;
@@ -156,7 +156,7 @@ body {
   color: var(--accent-color);
 }
 .current::after {
-  content: '';
+  content: "";
   width: 100%;
   height: 4px;
   color: var(--accent-color);
@@ -176,9 +176,11 @@ body {
   text-align: center;
   background-color: var(--background-color);
   color: var(--hero-text-color);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4),
-  rgba(47, 48, 58, 0.4)),
-  url(../images/background-Img.png);
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/background-Img.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -208,7 +210,8 @@ body {
   background: var(--accent-color);
   box-shadow: var(--box-shadow-color);
   border-radius: 4px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-btn:hover,
 .hero-btn:focus,
@@ -257,7 +260,7 @@ body {
   margin-left: 30px;
 }
 .advantages-icon {
-margin: 25px 100px 25px 100px;
+  margin: 25px 100px 25px 100px;
 }
 .advantages-item + .advantages-item {
   margin-left: 30px;
@@ -294,7 +297,7 @@ margin: 25px 100px 25px 100px;
   display: flex;
 }
 .what-do-thumb {
-position: relative;
+  position: relative;
 }
 .paragraf-container {
   bottom: 0;
@@ -308,13 +311,13 @@ position: relative;
 }
 
 .what-do-posttitle {
-font-size: 14px;
-line-height: 1.14;
-text-align: center;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: var(--hero-text-color);
-margin-top: 27px;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--hero-text-color);
+  margin-top: 27px;
   align-items: baseline;
 }
 /*--our-team-section--*/
@@ -337,14 +340,15 @@ margin-top: 27px;
   margin-left: 30px;
 }
 .our-team-item {
-background: var(--hero-text-color);
+  background: var(--hero-text-color);
 
-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .team-name-container {
-padding-top: 30px;
-padding-bottom: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .team-item-title {
   font-size: 16px;
@@ -375,12 +379,13 @@ padding-bottom: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-socials-link:hover,
 .team-socials-link:focus,
 .team-socials-link:active {
-background-color: var(--accent-color);
+  background-color: var(--accent-color);
 }
 .team-socials-icon {
   fill: var(--icons-socisls-color);
@@ -393,9 +398,9 @@ background-color: var(--accent-color);
 .team-socials-link:focus .team-socials-icon {
   fill: var(--hero-text-color);
 }
-  .team-socials-link:active .team-socials-icon {
+.team-socials-link:active .team-socials-icon {
   fill: var(--hero-text-color);
-  }
+}
 
 .team-socials-item + .team-socials-item {
   margin-left: 10px;
@@ -403,11 +408,11 @@ background-color: var(--accent-color);
 /* regular-customers-section*/
 
 .regular-customers-title {
-font-size: 36px;
-line-height: 1.16;
-text-align: center;
-letter-spacing: 0.03em;
-color: var(--header-links-title-text-color);
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--header-links-title-text-color);
 }
 .regular-customers-list {
   margin-top: 50px;
@@ -418,7 +423,7 @@ color: var(--header-links-title-text-color);
   height: 92px;
 }
 .regular-customers-item + .regular-customers-item {
-  margin-left: 30px; 
+  margin-left: 30px;
 }
 .regular-customers-link {
   border: 1px solid var(--icons-socisls-color);
@@ -429,17 +434,18 @@ color: var(--header-links-title-text-color);
   fill: var(--icons-socisls-color);
   width: 100%;
   height: 100%;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .customers-icons {
   fill: var(--icons-socisls-color);
   transition: fill 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.regular-customers-link:hover, 
-.regular-customers-link:focus, 
-.regular-customers-link:active  {
-  border-color: var(--accent-color) ;
+.regular-customers-link:hover,
+.regular-customers-link:focus,
+.regular-customers-link:active {
+  border-color: var(--accent-color);
 }
 .regular-customers-link:hover .customers-icons,
 .regular-customers-link:focus .customers-icons,
@@ -460,7 +466,7 @@ color: var(--header-links-title-text-color);
   align-items: baseline;
 }
 .footer-adres-container {
-margin-right: 70px;
+  margin-right: 70px;
 }
 .footer-adress {
   width: 231px;
@@ -491,12 +497,13 @@ margin-right: 70px;
   color: var(--hero-text-color);
 }
 .footer-socials-title {
-margin-bottom: 20px;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: var(--hero-text-color);}
+  margin-bottom: 20px;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--hero-text-color);
+}
 
 .footer-socials-list {
   display: flex;
@@ -523,7 +530,8 @@ color: var(--hero-text-color);}
   align-items: center;
   justify-content: center;
   color: var(--hero-text-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-socials-link:hover,
 .footer-socials-link:focus,
@@ -560,7 +568,8 @@ color: var(--hero-text-color);}
   text-align: center;
   letter-spacing: 0.03em;
   border-radius: 4px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn-portfolio :last-child {
   margin-right: 0;
@@ -587,7 +596,10 @@ color: var(--hero-text-color);}
   transition: color 250ms;
 }
 .projects-item:hover,
-.projects-item:focus {box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);}
+.projects-item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 .image {
   display: block;
   max-width: 100%;
@@ -599,13 +611,13 @@ color: var(--hero-text-color);}
 }
 .projects-item:hover .project-description {
   transform: translateY(0);
-} 
+}
 .projects-item:focus .project-description {
   transform: translateY(0);
 }
 .project-description {
-  top:0;
-  left:0;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   padding: 63px 24px 63px 24px;
@@ -620,10 +632,9 @@ color: var(--hero-text-color);}
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .title-container {
-border-right: 1px solid var(--border-cards-color);
-border-bottom: 1px solid var(--border-cards-color);
-border-left: 1px solid var(--border-cards-color);
-
+  border-right: 1px solid var(--border-cards-color);
+  border-bottom: 1px solid var(--border-cards-color);
+  border-left: 1px solid var(--border-cards-color);
 }
 .projects-link {
   display: block;
@@ -642,5 +653,50 @@ border-left: 1px solid var(--border-cards-color);
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
 }
+/*--footer-done-on-index.html--*/
 
-/*--footer-done-on-index.html--
+/*--backdrop--*/
+.backdrop {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top: 0;
+  transition: opacity 250ms, visibility 250ms;
+}
+.backdrop.is-hidden .modal {
+  transform: rotate(250deg) scale(0.5);
+}
+.modal {
+  width: 528px;
+  min-height: 581px;
+  background-color: var(--hero-text-color);
+  border-radius: 4px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(0) scale(1);
+  transition: transform 500ms;
+}
+.modal-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  padding: 0;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  justify-content: center;
+  align-items: center;
+}
+.modal-icon {
+  background: #ffffff;
+}
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
