--- a/css/styles.css
+++ b/css/styles.css
@@ -132,7 +132,6 @@ body {
   fill: currentColor;
 }
 .tel-icon {
-  margin-left: 30px;
   margin-right: 10px;
   align-items: center;
   fill: currentColor;
@@ -212,11 +211,12 @@ body {
   border-radius: 4px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: transparent;
 }
 .hero-btn:hover,
 .hero-btn:focus,
 .hero-btn:active {
-  color: var(--hover-btn-color);
+  color: var(--hero-text-color);
 }
 
 /*--advantages*/
@@ -298,7 +298,11 @@ body {
 }
 .paragraf-container {
   bottom: 0;
-  width: 370px;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
   height: 70px;
   position: absolute;
   background: rgba(47, 48, 58, 0.8);
@@ -310,12 +314,10 @@ body {
 .what-do-posttitle {
   font-size: 14px;
   line-height: 1.14;
-  text-align: center;
+  font-weight: 700;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--hero-text-color);
-  margin-top: 27px;
-  align-items: baseline;
 }
 /*--our-team-section--*/
 .our-team-section {
@@ -332,7 +334,7 @@ body {
 .our-team-list {
   display: flex;
 }
-.our-team-item + .our-team-item {
+.our-team-item:not(:last-child) {
   margin-right: 30px;
 }
 .our-team-item {
@@ -469,7 +471,18 @@ body {
   height: 81px;
   margin-top: 20px;
 }
-.footer-item-adres,
+.footer-item-adres {
+  text-decoration: none;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--hero-text-color);
+  transition: color 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .footer-link {
   text-decoration: none;
   font-style: normal;
@@ -565,7 +578,8 @@ body {
   letter-spacing: 0.03em;
   border-radius: 4px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn-portfolio :last-child {
   margin-right: 0;
@@ -591,8 +605,8 @@ body {
   flex-basis: calc(100% / 3 - 30px);
   transition: color 250ms;
 }
-.projects-item:hover,
-.projects-item:focus {
+.projects-link:hover,
+.projects-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -605,10 +619,8 @@ body {
   position: relative;
   overflow: hidden;
 }
-.projects-item:hover .project-description {
-  transform: translateY(0);
-}
-.projects-item:focus .project-description {
+.projects-link:hover .project-description,
+.projects-link:focus .project-description {
   transform: translateY(0);
 }
 .project-description {
@@ -636,6 +648,7 @@ body {
 .projects-link {
   display: block;
   text-decoration: none;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .projects-title {
   margin-bottom: 4px;
